<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#F2F1ED"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/profile_bg" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="90dp"
                android:layout_height="78dp"
                android:layout_marginTop="56dp"
                android:layout_marginBottom="4dp"
                app:layout_constraintBottom_toTopOf="@+id/textView10"
                app:layout_constraintEnd_toEndOf="@+id/textView10"
                app:layout_constraintStart_toStartOf="@+id/textView10"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/group1" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="4dp"
                android:gravity="center"
                android:text="Projeto Android Studio"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/textView17"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView3" />

            <TextView
                android:id="@+id/textView17"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:gravity="center"
                android:text="Faculdade Impacta"
                android:textColor="@color/black"
                android:textSize="12sp"
                app:layout_constraintBottom_toTopOf="@+id/constraintLayout2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView10" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView17">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/button4"
                        style="@android:style/Widget.Button"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_marginStart="32dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="32dp"
                        android:layout_marginBottom="10dp"
                        android:drawablePadding="20dp"
                        android:background="@color/white"
                        android:drawableStart="@drawable/profile02"
                        android:paddingStart="20dp"
                        android:text="Gabriel Carvalho | 2401423"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:textAlignment="viewStart"/>

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/button3"
                        style="@android:style/Widget.Button"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_marginStart="32dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="32dp"
                        android:layout_marginBottom="10dp"
                        android:drawablePadding="20dp"
                        android:background="@color/white"
                        android:drawableStart="@drawable/profile01"
                        android:paddingStart="20dp"
                        android:text="Gustavo Dias | 2401690"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:textAlignment="viewStart"/>

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/button2"
                        style="@android:style/Widget.Button"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_marginStart="32dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="32dp"
                        android:layout_marginBottom="10dp"
                        android:drawablePadding="20dp"
                        android:background="@color/white"
                        android:drawableStart="@drawable/profile03"
                        android:paddingStart="20dp"
                        android:text="Isabel Susa | 2400702"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:textAlignment="viewStart"/>

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/button5"
                        style="@android:style/Widget.Button"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_marginStart="32dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="32dp"
                        android:layout_marginBottom="10dp"
                        android:drawablePadding="20dp"
                        android:background="@color/white"
                        android:drawableStart="@drawable/profile04"
                        android:paddingStart="20dp"
                        android:text="Vitor Xavier | 2401721"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:textAlignment="viewStart"/>

                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
<!--Toolbar-->
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">
        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_gravity="bottom"
            android:background="@color/brown1"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical">

                <LinearLayout
                    android:id="@+id/explorebutton"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.2"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="22dp"
                        android:layout_height="22dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="8dp"
                        app:srcCompat="@drawable/btn_1" />

                    <TextView
                        style="@style/explorer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/explorer" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.2"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="22dp"
                        android:layout_height="22dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="8dp"
                        app:srcCompat="@drawable/btn_2" />

                    <TextView
                        style="@style/explorer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/carrinho" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.2"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="22dp"
                        android:layout_height="22dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="8dp"
                        app:srcCompat="@drawable/btn_3" />

                    <TextView
                        style="@style/explorer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/wishlist" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.2"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="22dp"
                        android:layout_height="22dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="8dp"
                        app:srcCompat="@drawable/btn_4" />

                    <TextView
                        style="@style/explorer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/order" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/perfilbutton"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.2"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/mainperfil"
                        android:layout_width="22dp"
                        android:layout_height="22dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="8dp"
                        app:srcCompat="@drawable/btn_5" />

                    <TextView
                        style="@style/explorer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/profile" />
                </LinearLayout>
            </LinearLayout>
        </com.google.android.material.bottomnavigation.BottomNavigationView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</androidx.constraintlayout.widget.ConstraintLayout>

